Implemented dark mode

--- a/index.html
+++ b/index.html
@@ -16,13 +16,26 @@
 </head>
 
 <body>
-
     <svg id="radar"></svg>
 
     <script>
         fetch('data.json').then(function (response) {
             return response.json();
         }).then(function (data) {
+            const prefersDarkMode = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+
+            const radarColors = prefersDarkMode
+                ? {
+                    background: "#1d2125",  // Dark background
+                    grid: '#444',           // Darker grid lines
+                    inactive: "#777"        // Darker inactive blips
+                }
+                : {
+                    background: "#ffffff",  // Light background
+                    grid: '#ddd',           // Light grid lines
+                    inactive: "#ddd"        // Light inactive blips
+                };
+
             const MOVEMENT_VALUES = {
                 'in': 1,
                 'out': -1,
@@ -34,11 +47,7 @@
                 svg_id: "radar",
                 width: 1450,
                 height: 1000,
-                colors: {
-                    background: "#fff",
-                    grid: '#dddde0',
-                    inactive: "#ddd"
-                },
+                colors: radarColors,
                 title: data.title,
                 date: data.date,
                 quadrants: [
@@ -121,7 +130,5 @@
             </td>
         </tr>
     </table>
-
 </body>
-
 </html>
